--- a/src/app/paginas/juego/DialogosEscaperoom/editar-objetos-activos-escaperoom/editar-objetos-activos-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/editar-objetos-activos-escaperoom/editar-objetos-activos-escaperoom.component.html
@@ -1,7 +1,7 @@
 <div align="center">
   <mat-card class="panel">
   
-    <form *ngIf="tengoObjetosDeEscena">
+    <form>
       <div class="enColumna">
         <span style="font-weight: bold;color:black;">Nombre: {{objetoEditar.Nombre}}</span>
         <img style="margin-left: 15px;" class="imagenObjeto" mat-card-image [src]="imagenObjeto">
