--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
@@ -5,7 +5,7 @@
     <div class="enColumna">
       <div class="enFila">
         <div style="width:60% ;">
-          <div class = "filter">
+          <div class = "filter2">
             <mat-form-field>
               <input matInput (keyup)="applyFilterEscenas($event.target.value)" placeholder="Filtro para buscar escenas añadidas...">
               <i class="material-icons" matSuffix>search</i>
