--- a/src/styles.scss
+++ b/src/styles.scss
@@ -375,6 +375,11 @@ input[type=text] {
   margin-left: 20%;
 }
 
+.filter2 {
+  width: 60%;
+  font-size: 14px;
+}
+
 .contenedorFooter{
   width: 70%;
   height: 50px;
