--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2684,12 +2684,16 @@
                 <br>
                 <br>
                 <div align="center">
-                  <span *ngIf="!tengoRequisitosObjetos" style="font-weight: bold;color:red;"> No se cumplen los requisitos en todas las escenas </span>                
+                  <span *ngIf="!tengoRequisitosObjetos" style="font-weight: bold;color:red;"> Las escenas con requisito de tipo objeto requieren de un objeto como requisito </span>                
+                </div>
+                <br>
+                <div align="center">
+                  <span *ngIf="!tengoRequisitosObjetosConPuntos" style="font-weight: bold;color:red;"> Las escenas con requisito de tipo puntos requieren de objetos con preguntas que den puntos </span>                
                 </div>
                 <br>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoRequisitosObjetos" type="button" class="btn Next"
+                  <button [disabled]="!tengoRequisitosObjetos || !tengoRequisitosObjetosConPuntos" type="button" class="btn Next" (click)="DameObjetosConPreguntas()"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
@@ -2700,73 +2704,79 @@
                 <ng-template matStepLabel>
                   <div>Preguntas</div>
                 </ng-template>
-                <div align="center">
-                  <span *ngIf="!tengoRequisitosPreguntas" style="font-weight: bold;color:red;"> Hacen falta {{tiempoRestante}} minutos para cumplir con el tiempo límite del escenario ( {{tiempoLimiteEscaperoom}} )</span>
-                </div>
-                <br>
-                <form style = "width: 100%"  *ngIf="tengoEscenasEscaperoom;else Aviso_no_escenas">
 
+                <form style = "width: 100%"  *ngIf="tengoObjetosConPreguntas;else Aviso_no_preguntas">
+                  <div align="center">
+                    <span *ngIf="!tengoRequisitosObjetosConPreguntas" style="font-weight: bold;color:red;"> Requisitos de puntos no cumplidos</span>
+                  </div>
+                  <br>
                   <div class = "filter">
                     <mat-form-field>
                       <input matInput (keyup)="applyFilterEscenas($event.target.value)" placeholder="Filtro para buscar escenas añadidas...">
                       <i class="material-icons" matSuffix>search</i>
                     </mat-form-field>
                   </div>
-                  <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceEscenas" class="mat-elevation-z8">
+                  <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceObjetosConPreguntas" class="mat-elevation-z8">
         
-                    <ng-container matColumnDef="Orden">
-                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Orden </th>
-                      <td mat-cell *matCellDef="let escena"> {{escena.Orden}} </td>
-                    </ng-container>
-
                     <ng-container matColumnDef="Nombre">
                       <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
-                      <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
+                      <td mat-cell *matCellDef="let objeto"> {{objeto.Nombre}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="Tiempo Limite">
-                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Tiempo Limite </th>
-                      <td mat-cell *matCellDef="let escena"> {{escena.TiempoLimite}} minutos </td>
+                    <ng-container matColumnDef="Orden Escena">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Orden Escena </th>
+                      <td mat-cell *matCellDef="let objeto"> {{objeto.OrdenEscenaAct}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="Requisito">
-                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Requisito </th>
-                      <td mat-cell *matCellDef="let escena"> {{escena.Requisito}}<span *ngIf="escena.Requisito=='puntos'"> : {{escena.Puntosrequisito}}</span> </td>
+                    <ng-container matColumnDef="Titulo">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Titulo </th>
+                      <td style=" max-width: 200px;
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      white-space: nowrap;"
+                      mat-cell *matCellDef="let objeto"> {{objeto.TituloPregunta}} minutos </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Puntos Sumar">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Puntos a sumar </th>
+                      <td mat-cell *matCellDef="let objeto"> {{objeto.Sumar}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Puntos Restar">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Puntos a restar </th>
+                      <td mat-cell *matCellDef="let objeto"> {{objeto.Restar}} </td>
                     </ng-container>
         
                     <ng-container matColumnDef="Iconos">
                         <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-                        <td  mat-cell *matCellDef="let escena">
+                        <td  mat-cell *matCellDef="let objeto">
                           <div align="right">
-                            <button  (click) = "EditarEscenasActivas(escena)" mat-icon-button matTooltip="Ver la escena">
+                            <button *ngIf="!objeto.TengoPregunta" (click) = "EditarPreguntasActivas(objeto)" mat-icon-button matTooltip="Añade una pregunta">
+                              <i class="material-icons green md-36">add</i>
+                            </button>
+                            <button *ngIf="objeto.TengoPregunta" (click) = "EditarPreguntasActivas(objeto)" mat-icon-button matTooltip="Editar la pregunta">
                               <i class="material-icons green md-36">edit</i>
                             </button>
-                            <button (click) = "AbrirDialogoConfirmacionBorrarEscena(escena)" mat-icon-button matTooltip="Eliminar la escena">
+                            <button *ngIf="objeto.TengoPregunta" (click) = "AbrirDialogoConfirmacionBorrarPregunta(objeto)" mat-icon-button matTooltip="Eliminar la escena">
                               <i class="material-icons red md-36">delete</i>
                             </button>
                           </div>
                       </td>
                     </ng-container>
         
-                    <tr mat-header-row *matHeaderRowDef="displayedColumnsEscenas"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumnsEscenas;">
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsObjetosConPreguntas"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsObjetosConPreguntas;">
                     </tr>
                   </table>
-                </form>
+                </form>                
                 <div class="contenedor">
-                  <ng-template  #Aviso_no_escenas><div class="texto">No tienes escenas todavía</div></ng-template>
-                </div>
-                <br>
-                <div align="center">
-                  <button type="button" class="btn Agregar" (click)="AbrirDialogoAgregarEscena()"
-                    style="width: auto;">Añadir Escena<i class="material-icons">
-                      post_add </i></button>
+                  <ng-template  #Aviso_no_preguntas><div class="texto">No hay objetos con preguntas</div></ng-template>
                 </div>
                 <br>
                 <br>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoTiempos" type="button" class="btn Next" (click)="CrearRequisitos()"
+                  <button [disabled]="!tengoRequisitosObjetosConPreguntas" type="button" class="btn Next"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
