--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2679,8 +2679,6 @@
                         post_add </i></button>
                   </div>
                 </div>
-
-
                 <br>
                 <br>
                 <div align="center">
@@ -2734,7 +2732,7 @@
                       overflow: hidden;
                       text-overflow: ellipsis;
                       white-space: nowrap;"
-                      mat-cell *matCellDef="let objeto"> {{objeto.TituloPregunta}} minutos </td>
+                      mat-cell *matCellDef="let objeto"> {{objeto.TituloPregunta}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="Puntos Sumar">
