--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
@@ -23,7 +23,10 @@
 
     <ng-container matColumnDef="descripcion">
       <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Descripción </th>
-      <td mat-cell *matCellDef="let escenario"> {{escenario.Descripcion}} </td>
+      <td style=" max-width: 100px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;" mat-cell *matCellDef="let escenario"> {{escenario.Descripcion}} </td>
     </ng-container>
 
     
