--- a/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
@@ -49,8 +49,8 @@
           </td>
         </ng-container>
           
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsPreguntas"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsPreguntas;"
             [ngClass]="{'pregunta-selected': row.id === preguntaSeleccionada.id}">
           </tr>
   
