--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2749,7 +2749,7 @@
                         <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
                         <td  mat-cell *matCellDef="let objeto">
                           <div align="right">
-                            <button *ngIf="!objeto.TengoPregunta" (click) = "EditarPreguntasActivas(objeto)" mat-icon-button matTooltip="Añade una pregunta">
+                            <button *ngIf="!objeto.TengoPregunta" (click) = "AbrirDialogoAgregarPregunta(objeto)" mat-icon-button matTooltip="Añade una pregunta">
                               <i class="material-icons green md-36">add</i>
                             </button>
                             <button *ngIf="objeto.TengoPregunta" (click) = "EditarPreguntasActivas(objeto)" mat-icon-button matTooltip="Editar la pregunta">
