--- a/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
@@ -32,7 +32,7 @@
             white-space: nowrap;" mat-cell *matCellDef="let pregunta"> {{pregunta.Pregunta}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="Temática">
+          <ng-container matColumnDef="Tematica">
             <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
             <td mat-cell *matCellDef="let pregunta"> {{pregunta.Tematica}} </td>
           </ng-container>
@@ -50,8 +50,7 @@
         </ng-container>
           
           <tr mat-header-row *matHeaderRowDef="displayedColumnsPreguntas"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumnsPreguntas;"
-            [ngClass]="{'pregunta-selected': row.id === preguntaSeleccionada.id}">
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsPreguntas;">
           </tr>
   
             </table>
