--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2704,6 +2704,37 @@
                 </ng-template>
 
                 <form style = "width: 100%"  *ngIf="tengoObjetosConPreguntas;else Aviso_no_preguntas">
+                  <div class = "filter">
+                    <mat-form-field>
+                      <input matInput (keyup)="applyFilterRequisitos($event.target.value)" placeholder="Filtro para buscar requisitos...">
+                      <i class="material-icons" matSuffix>search</i>
+                    </mat-form-field>
+                  </div>
+                  <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceRequisitosEscenasPuntos" class="mat-elevation-z8">
+        
+                    <ng-container matColumnDef="Orden">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Orden de la escena </th>
+                      <td mat-cell *matCellDef="let req"> {{req.OrdenEscena}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Puntos Requisito">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Puntos Min. </th>
+                      <td mat-cell *matCellDef="let req"> {{req.PuntosRquisito}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Puntos Actuales">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Puntos actuales </th>
+                      <td mat-cell *matCellDef="let req"> {{req.PuntosActuales}} </td>
+                    </ng-container>
+
+        
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsRequisitosEscenasPuntos"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsRequisitosEscenasPuntos;">
+                    </tr>
+                  </table>
+
+
+
                   <div align="center">
                     <span *ngIf="!tengoRequisitosObjetosConPreguntas" style="font-weight: bold;color:red;"> Requisitos de puntos no cumplidos</span>
                   </div>
@@ -2733,6 +2764,15 @@
                       text-overflow: ellipsis;
                       white-space: nowrap;"
                       mat-cell *matCellDef="let objeto"> {{objeto.TituloPregunta}}</td>
+                    </ng-container>
+
+                                        <ng-container matColumnDef="Pregunta">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Pregunta </th>
+                      <td style=" max-width: 200px;
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      white-space: nowrap;"
+                      mat-cell *matCellDef="let objeto"> {{objeto.Pregunta}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="Puntos Sumar">
