--- a/src/styles.scss
+++ b/src/styles.scss
@@ -850,3 +850,9 @@ span.avatar5col {
   display: inline-flex; 
   vertical-align: top;
 }
+
+//estilo row
+
+.pregunta-selecccionada{
+  background-color: rgb(121, 196, 9);
+}
