--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-preguntas-escaperoom/asignar-preguntas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-preguntas-escaperoom/asignar-preguntas-escaperoom.component.html
@@ -10,7 +10,7 @@
             </mat-form-field>
           </div>
 
-          <table align="center" mat-table [dataSource]="dataSourcePreguntas" class="example-container mat-elevation-z8">
+          <table align="center" mat-table [dataSource]="dataSourcePreguntas" class="example-container mat-elevation-z8" id="tablaPA">
   
           <ng-container matColumnDef="Titulo">
             <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Título </th>
