--- a/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
@@ -9,7 +9,7 @@
                 <i class="material-icons" matSuffix>search</i>
               </mat-form-field>
             </div>
-            <table align="center" mat-table [dataSource]="dataSourcePreguntas" class="example-container mat-elevation-z8">
+            <table align="center" mat-table [dataSource]="dataSourcePreguntas" class="example-container mat-elevation-z8" id="tablaPA">
   
           <ng-container matColumnDef="Titulo">
             <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
@@ -39,7 +39,7 @@
 
           <ng-container matColumnDef="Iconos">
             <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-            <td  mat-cell *matCellDef="let pregunta">
+            <td  mat-cell *matCellDef="let pregunta;" name="iconadd">
               <div align="right">
                 <button  (click) = "SeleccionarPregunta(pregunta)" mat-icon-button matTooltip="Selecciona la pregunta">
                   <i class="material-icons green md-36">add</i>
@@ -53,7 +53,7 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumnsPreguntas;">
           </tr>
   
-            </table>
+        </table>
 
         <br>
         <br>        
@@ -81,3 +81,4 @@
     </mat-dialog-actions>
   </mat-card>
   </div>
+
